kubeConfig/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service-kube-spring-hello
spec:
  selector:
    app: kube-spring-hello
  ports:
    - protocol: TCP
      port: 80 # This is the port of the service that it exposes to the outside world
      targetPort: 8080 # This is the port of the container in k8s
