kubeConfig/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: my-ingress-kube-spring-hello
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: my-service-kube-spring-hello
                port:
                  number: 80
            path: /foo
            pathType: Prefix
    - http:
        paths:
          - backend:
              service:
                name: my-service-kube-spring-hello
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: dem.localdev.me
      http:
        paths:
          - backend:
              service:
                name: my-service-kube-spring-hello
                port:
                  number: 80
            path: /
            pathType: Prefix
